# conferences-rest-poco

./: CMakeLists.txt  README.md  commands.sql  index.yaml  start.sh  start_writer.sh  writer_user.cpp
config/: config.cpp  config.h
database/: cache.cpp  cache.h  conf.cpp  conf.h  database.cpp  pres.cpp  pres.h  user.cpp  user.h
docker/: docker-compose.yml
docker/mysql/: Dockerfile
docker/proxysql/: proxysql.cnf
web_server/: http_request_factory.h  http_web_server.h
web_server/handlers/: conf_handler.h  pres_handler.h  user_handler.h
